fix overflow of wide test list

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: "Courier New";
   font-size: 70%;
+  overflow-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
